--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">GitNote</string>
+    <string name="app_name">GitNotes</string>
+    <string name="title_all_notes">All Notes</string>
+    <string name="title_notes_repo">Notes Repo</string>
+    <string name="title_gists">Gists</string>
+    <string name="title_notification">Notification</string>
+    <string name="open_drawer">open drawer</string>
+    <string name="close_drawer">close drawer</string>
 </resources>
