Fixed bug encountered when rotating the screen. Alert user when the network connection is lost.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="repo_name_label">Repository Name</string>
     <string name="comment_body">Comment Body</string>
     <string name="label_name_label">Label Name</string>
+    <string name="delete">Delete</string>
 
 </resources>
